--- a/src/main/Calculator.css
+++ b/src/main/Calculator.css
@@ -8,4 +8,5 @@
     display: grid;
     grid-template-columns: repeat(4,25%);
     grid-template-rows: 1fr 48px 48px 48px 48 px 48px;
+    border: solid 2px #cdced9;
 }
